2006-05-31  Nathan Bird <nathan@acceleration.net>

	* swank.lisp (*sldb-quit-restart*): New variable.
	(throw-to-toplevel): Use the restart named by *sldb-quit-restart*
	as opposed to hard coding abort-request.

2006-05-30  Tobias Rittweiler <tcr@freebits.de>

	* slime.el (slime-get-temp-buffer-create): New keyword REUSEP
	which indicates whether an already-existing buffer named like the
	buffer to be created should be reused, i.e. not killed, then
	freshly created. Update docstring accordingly.
	(slime-with-output-to-temp-buffer): Make &optional arg MODE an
	&key keyword arg. Add REUSEP keyword.
	(slime-macroexpansion-minor-mode-map): Make remapped `undo' update
	highlighted edits in the macroexpansion buffer.
	(slime-eval-macroexpand-in-place): Update highlighted edits when
	macroexpanding in-place.
	(slime-eval-macroexpand): Reuse macroexpansion buffer if it exists
	already to preserve `undo' functionality.

2006-05-30  Tobias Rittweiler <tcr@freebits.de>

	* slime.el (slime-use-autodoc-mode): Fix typo in docstring.
	(slime-use-highlight-edits-mode): New variable, analogous to
	SLIME-USE-AUTODOC-MODE.
	(slime-setup, slime-lisp-mode-hook): Make above variable
	work. Also, activates the HIGHLIGHT-EDITS-MODE in proper way (thus
	avoiding the nasty "Toggling ... off; better pass an explicit
	argument." message.)

	* slime.el: Fix typo in comment about communication protocol.

2006-05-27  Alan Ruttenberg <alanr-l@mumble.net>
	* swank-abcl: slot-boundp-using-class slot-value-using-class  so you 
	can inspect instances

2006-05-26  Tobias C. Rittweiler <tcr@freebits.de>
	
	* slime.el (slime-eval-macroexpand-inplace): Fix out-of-range
	error on in-place macroexpand when point is placed at a closing
	parenthesis. In this case the sexp closed by that paren is
	expanded.  
	Also make expanding of expressions work that are quoted like, for
	instance, "'(FOO BAR)" if point is placed at the opening paren.

2006-05-24  Brian Downing  <bdowning@lavos.net>
